# aviation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yaml
open_data/: aircraft_fuel_burn.csv
plots/: aircrafts.ipynb  airlines.ipynb  airports.ipynb  flight_efficiency_map.ipynb  fuel_burn.ipynb  intensity_cap_mlp.ipynb  intensity_cap_models.ipynb  intensity_cap_models_fuelburn.ipynb  relative_intensity.ipynb
src/aviation/: main.py
src/aviation/sql/: by_aircrafttype.sql  by_aircrafttype1.sql  by_airline.sql  by_airlinecountry.sql  by_route.sql  by_route_airline.sql  by_route_load+1p.sql  by_route_load+2p.sql  by_route_load+5p.sql  by_route_load1.sql  by_route_p1_p5_p10.sql  describe.sql  distribution_distances.sql  most_least_efficients.sql  optimal.sql  total.sql  unique_invariants.sql
tests/: test_data.py
